# tradiba

./: .gitignore  README.md  pyproject.toml
src/tradiba/: __init__.py  __main__.py  version.py
src/tradiba/config/: __init__.py  defaults.toml  loader.py  settings.py
src/tradiba/core/: __init__.py  application.py  bootstrap.py  container.py  lifecycle.py  service.py
src/tradiba/events/: __init__.py  base.py  bus.py  handlers.py
src/tradiba/live/: engine.py  live_clock.py
src/tradiba/logging/: __init__.py  config.py  logger.py
src/tradiba/market/: __init__.py  aggregator.py  events.py  service.py  subscriptions.py
src/tradiba/market_structure/: __init__.py  detector.py  events.py  models.py  service.py  state.py
src/tradiba/mt5/: __init__.py  client.py  exceptions.py  models.py  service.py  timeframes.py
src/tradiba/ports/: clock.py  execution.py  market_data.py
src/tradiba/replay/: __init__.py  engine.py  replay_clock.py  source.py
src/tradiba/scheduler/: __init__.py  scheduler.py  task.py
src/tradiba/strategy/: __init__.py  base.py  events.py  manager.py  models.py  registry.py
tests/: test_strategy.py  test_structure_breaks.py  test_swing_detection.py
